--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,7 +21,10 @@
         <br />
         <h:link outcome="/atividade/List" value="Show All Atividade Items"/>
         <br />
-        <h:link outcome="/pagamento/List" value="Show All Pagamento Items"/>
+        <h:link outcome="/pagamento/List" value="Show All Pagamento Items"/>       
+        <br />
+        <br />
+        <h:link outcome="/aluno2/matricularAtividade" value="Matricular aluno em uma atividade" />
     </h:body>
 
 
