--- a/web/aluno2/View.xhtml
+++ b/web/aluno2/View.xhtml
@@ -30,14 +30,33 @@
                     <h:outputText value="#{bundle.ViewAluno2Label_listaPagamentos}"/>
                     <h:dataTable value="#{aluno2Controller.current.listaPagamentos}" var="pgt">
                         <h:column>
-                            <f:facet name="header">Pagamento</f:facet>
+                            <f:facet name="header">Valor</f:facet>
                             <h:outputText value="#{pgt.valor}"/>
                         </h:column>
-                    </h:dataTable>
-                    
-                    <h:outputText value="Total devendo: "/>
+                        <h:column>
+                            <f:facet name="header">Pago</f:facet>
+                            <h:outputText value="#{pgt.pago}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"> - </f:facet>
+                            <h:commandLink style="color:green;"  action="#{pagamentoController.pagar(pgt)}" value=" Pagar " />
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"> - </f:facet>
+                            <h:commandLink style="color:red;" action="#{pagamentoController.despagar(pgt)}" value=" Despagar " />
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"> - </f:facet>
+                            <h:commandLink style="color:blue;" action="#{pagamentoController.despagar(pgt)}" value=" Manuteção " />
+                        </h:column>
+
+                    </h:dataTable>            
+
+                    <h:outputText value="Total devendo: " />
                     <h:outputText style="color:red; font-size:20px;" value="#{aluno2Controller.totalPagamentos}"/>
-                    
+                    <h:commandLink action="#{pagamentoController.pagarTodos(aluno2Controller.current.listaPagamentos)}"  value="Pagar tudo" />
+
+
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{aluno2Controller.destroyAndView}" value="#{bundle.ViewAluno2DestroyLink}"/>
