--- a/web/aluno2/matricularAtividade.xhtml
+++ b/web/aluno2/matricularAtividade.xhtml
@@ -30,7 +30,8 @@
                                                              
                      <h:commandLink action="#{aluno2Controller.matricula}" value="#{bundle.CreateAluno2SaveLink}" />
                 </h:form>
-
+                           <br />
+                <h:link outcome="/index" value="#{bundle.ViewAluno2IndexLink}"/>
             </ui:define>
         </ui:composition>
 
