--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,9 +9,9 @@
     <h:body>
         Hello from Facelets
         <br />
-        <h:link outcome="/aluno2/List" value="Show All Aluno2 Items"/>
+        <h:link outcome="/aluno2/List" value="Ver todos alunos"/>
         <br />
-        <h:link outcome="/atividade/List" value="Show All Atividade Items"/>
+        <h:link outcome="/atividade/List" value="Ver todas atividades"/>
         <br />
         <br />
         <h:link outcome="/aluno2/matricularAtividade" value="Matricular aluno em uma atividade" />
