--- a/web/aluno2/View.xhtml
+++ b/web/aluno2/View.xhtml
@@ -33,9 +33,17 @@
                             <f:facet name="header">Valor</f:facet>
                             <h:outputText value="#{pgt.valor}"/>
                         </h:column>
+                          <h:column>
+                            <f:facet name="header">Data</f:facet>
+                            <h:outputText value="#{pgt.dataPagamento}"> 
+                                 <f:convertDateTime pattern="dd/MM/yyyy" type="date" />
+                            </h:outputText>
+                        </h:column>
                         <h:column>
                             <f:facet name="header">Pago</f:facet>
-                            <h:outputText value="#{pgt.pago}"/>
+                            <h:outputText value="#{pgt.pago}">
+                              
+                            </h:outputText>
                         </h:column>
                         <h:column>
                             <f:facet name="header"> - </f:facet>
